[build-system]
requires = ["setuptools>=61.0", "blessed", "typing"]
build-backend = "setuptools.build_meta"

[project]
name = "haccks"
version = "1.01"
authors = [
  { name="Lucas Parsy" },
]
description = "Hacker Animation Cool Console Kryptographic Sequencer (haccks)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/LucasParsy/haccks"
Issues = "https://github.com/LucasParsy/haccks/issues"